Compiladores/Entrega_3/y.output
   0  $accept : Prog $end

   1  Prog : Decl ListaFuncoes

   2  Decl : Tipo LId ';' Decl
   3       |

   4  Tipo : INT
   5       | DOUBLE
   6       | BOOLEAN

   7  LId : LId ',' IDENT
   8      | IDENT

   9  ListaFuncoes : umaFuncao restoListFuncoes

  10  restoListFuncoes : ListaFuncoes
  11                   |

  12  umaFuncao : FUNCT tipoOuVoid IDENT restoUmaFuncao

  13  restoUmaFuncao : '(' ')' Bloco
  14                 | '(' ListaParametros ')' Bloco

  15  tipoOuVoid : VOID
  16             | Tipo

  17  ListaParametros : Tipo restoListaParametros

  18  restoListaParametros : IDENT
  19                       | IDENT ',' ListaParametros

  20  Bloco : '{' LCmd '}'

  21  LCmd : Cmd LCmd
  22       |

  23  Cmd : Bloco
  24      | IF '(' E ')' Cmd restoIF
  25      | WHILE '(' E ')' Cmd
  26      | E ';'

  27  restoIF : ELSE Cmd
  28          |

  29  E : F EA

  30  EA : OP E
  31     |

  32  F : NUM
  33    | IDENT restoIDENT
  34    | '(' E ')'

  35  OP : '='
  36     | '+'
  37     | '-'
  38     | '*'
  39     | '/'
  40     | '<'
  41     | '>'
  42     | AND
  43     | OR

  44  restoIDENT : '(' listaExp ')'
  45             | '(' ')'
  46             |

  47  listaExp : E restoListaEXP

  48  restoListaEXP : ',' listaExp
  49                |

state 0
	$accept : . Prog $end  (0)
	Decl : .  (3)

	INT  shift 1
	DOUBLE  shift 2
	BOOLEAN  shift 3
	FUNCT  reduce 3

	Prog  goto 4
	Decl  goto 5
	Tipo  goto 6


state 1
	Tipo : INT .  (4)

	.  reduce 4


state 2
	Tipo : DOUBLE .  (5)

	.  reduce 5


state 3
	Tipo : BOOLEAN .  (6)

	.  reduce 6


state 4
	$accept : Prog . $end  (0)

	$end  accept


state 5
	Prog : Decl . ListaFuncoes  (1)

	FUNCT  shift 7
	.  error

	ListaFuncoes  goto 8
	umaFuncao  goto 9


state 6
	Decl : Tipo . LId ';' Decl  (2)

	IDENT  shift 10
	.  error

	LId  goto 11


state 7
	umaFuncao : FUNCT . tipoOuVoid IDENT restoUmaFuncao  (12)

	INT  shift 1
	DOUBLE  shift 2
	BOOLEAN  shift 3
	VOID  shift 12
	.  error

	Tipo  goto 13
	tipoOuVoid  goto 14


state 8
	Prog : Decl ListaFuncoes .  (1)

	.  reduce 1


state 9
	ListaFuncoes : umaFuncao . restoListFuncoes  (9)
	restoListFuncoes : .  (11)

	FUNCT  shift 7
	$end  reduce 11

	ListaFuncoes  goto 15
	umaFuncao  goto 9
	restoListFuncoes  goto 16


state 10
	LId : IDENT .  (8)

	.  reduce 8


state 11
	Decl : Tipo LId . ';' Decl  (2)
	LId : LId . ',' IDENT  (7)

	';'  shift 17
	','  shift 18
	.  error


state 12
	tipoOuVoid : VOID .  (15)

	.  reduce 15


state 13
	tipoOuVoid : Tipo .  (16)

	.  reduce 16


state 14
	umaFuncao : FUNCT tipoOuVoid . IDENT restoUmaFuncao  (12)

	IDENT  shift 19
	.  error


state 15
	restoListFuncoes : ListaFuncoes .  (10)

	.  reduce 10


state 16
	ListaFuncoes : umaFuncao restoListFuncoes .  (9)

	.  reduce 9


state 17
	Decl : Tipo LId ';' . Decl  (2)
	Decl : .  (3)

	INT  shift 1
	DOUBLE  shift 2
	BOOLEAN  shift 3
	FUNCT  reduce 3

	Decl  goto 20
	Tipo  goto 6


state 18
	LId : LId ',' . IDENT  (7)

	IDENT  shift 21
	.  error


state 19
	umaFuncao : FUNCT tipoOuVoid IDENT . restoUmaFuncao  (12)

	'('  shift 22
	.  error

	restoUmaFuncao  goto 23


state 20
	Decl : Tipo LId ';' Decl .  (2)

	.  reduce 2


state 21
	LId : LId ',' IDENT .  (7)

	.  reduce 7


state 22
	restoUmaFuncao : '(' . ')' Bloco  (13)
	restoUmaFuncao : '(' . ListaParametros ')' Bloco  (14)

	INT  shift 1
	DOUBLE  shift 2
	BOOLEAN  shift 3
	')'  shift 24
	.  error

	Tipo  goto 25
	ListaParametros  goto 26


state 23
	umaFuncao : FUNCT tipoOuVoid IDENT restoUmaFuncao .  (12)

	.  reduce 12


state 24
	restoUmaFuncao : '(' ')' . Bloco  (13)

	'{'  shift 27
	.  error

	Bloco  goto 28


state 25
	ListaParametros : Tipo . restoListaParametros  (17)

	IDENT  shift 29
	.  error

	restoListaParametros  goto 30


state 26
	restoUmaFuncao : '(' ListaParametros . ')' Bloco  (14)

	')'  shift 31
	.  error


state 27
	Bloco : '{' . LCmd '}'  (20)
	LCmd : .  (22)

	IDENT  shift 32
	NUM  shift 33
	IF  shift 34
	WHILE  shift 35
	'('  shift 36
	'{'  shift 27
	'}'  reduce 22

	Bloco  goto 37
	LCmd  goto 38
	Cmd  goto 39
	E  goto 40
	F  goto 41


state 28
	restoUmaFuncao : '(' ')' Bloco .  (13)

	.  reduce 13


state 29
	restoListaParametros : IDENT .  (18)
	restoListaParametros : IDENT . ',' ListaParametros  (19)

	','  shift 42
	')'  reduce 18


state 30
	ListaParametros : Tipo restoListaParametros .  (17)

	.  reduce 17


state 31
	restoUmaFuncao : '(' ListaParametros ')' . Bloco  (14)

	'{'  shift 27
	.  error

	Bloco  goto 43


state 32
	F : IDENT . restoIDENT  (33)
	restoIDENT : .  (46)

	'('  shift 44
	AND  reduce 46
	OR  reduce 46
	'='  reduce 46
	'<'  reduce 46
	'>'  reduce 46
	'+'  reduce 46
	'-'  reduce 46
	'*'  reduce 46
	'/'  reduce 46
	';'  reduce 46
	','  reduce 46
	')'  reduce 46

	restoIDENT  goto 45


state 33
	F : NUM .  (32)

	.  reduce 32


state 34
	Cmd : IF . '(' E ')' Cmd restoIF  (24)

	'('  shift 46
	.  error


state 35
	Cmd : WHILE . '(' E ')' Cmd  (25)

	'('  shift 47
	.  error


state 36
	F : '(' . E ')'  (34)

	IDENT  shift 32
	NUM  shift 33
	'('  shift 36
	.  error

	E  goto 48
	F  goto 41


state 37
	Cmd : Bloco .  (23)

	.  reduce 23


state 38
	Bloco : '{' LCmd . '}'  (20)

	'}'  shift 49
	.  error


state 39
	LCmd : Cmd . LCmd  (21)
	LCmd : .  (22)

	IDENT  shift 32
	NUM  shift 33
	IF  shift 34
	WHILE  shift 35
	'('  shift 36
	'{'  shift 27
	'}'  reduce 22

	Bloco  goto 37
	LCmd  goto 50
	Cmd  goto 39
	E  goto 40
	F  goto 41


state 40
	Cmd : E . ';'  (26)

	';'  shift 51
	.  error


state 41
	E : F . EA  (29)
	EA : .  (31)

	AND  shift 52
	OR  shift 53
	'='  shift 54
	'<'  shift 55
	'>'  shift 56
	'+'  shift 57
	'-'  shift 58
	'*'  shift 59
	'/'  shift 60
	';'  reduce 31
	','  reduce 31
	')'  reduce 31

	EA  goto 61
	OP  goto 62


state 42
	restoListaParametros : IDENT ',' . ListaParametros  (19)

	INT  shift 1
	DOUBLE  shift 2
	BOOLEAN  shift 3
	.  error

	Tipo  goto 25
	ListaParametros  goto 63


state 43
	restoUmaFuncao : '(' ListaParametros ')' Bloco .  (14)

	.  reduce 14


state 44
	restoIDENT : '(' . listaExp ')'  (44)
	restoIDENT : '(' . ')'  (45)

	IDENT  shift 32
	NUM  shift 33
	'('  shift 36
	')'  shift 64
	.  error

	E  goto 65
	F  goto 41
	listaExp  goto 66


state 45
	F : IDENT restoIDENT .  (33)

	.  reduce 33


state 46
	Cmd : IF '(' . E ')' Cmd restoIF  (24)

	IDENT  shift 32
	NUM  shift 33
	'('  shift 36
	.  error

	E  goto 67
	F  goto 41


state 47
	Cmd : WHILE '(' . E ')' Cmd  (25)

	IDENT  shift 32
	NUM  shift 33
	'('  shift 36
	.  error

	E  goto 68
	F  goto 41


state 48
	F : '(' E . ')'  (34)

	')'  shift 69
	.  error


state 49
	Bloco : '{' LCmd '}' .  (20)

	.  reduce 20


state 50
	LCmd : Cmd LCmd .  (21)

	.  reduce 21


state 51
	Cmd : E ';' .  (26)

	.  reduce 26


state 52
	OP : AND .  (42)

	.  reduce 42


state 53
	OP : OR .  (43)

	.  reduce 43


state 54
	OP : '=' .  (35)

	.  reduce 35


state 55
	OP : '<' .  (40)

	.  reduce 40


state 56
	OP : '>' .  (41)

	.  reduce 41


state 57
	OP : '+' .  (36)

	.  reduce 36


state 58
	OP : '-' .  (37)

	.  reduce 37


state 59
	OP : '*' .  (38)

	.  reduce 38


state 60
	OP : '/' .  (39)

	.  reduce 39


state 61
	E : F EA .  (29)

	.  reduce 29


state 62
	EA : OP . E  (30)

	IDENT  shift 32
	NUM  shift 33
	'('  shift 36
	.  error

	E  goto 70
	F  goto 41


state 63
	restoListaParametros : IDENT ',' ListaParametros .  (19)

	.  reduce 19


state 64
	restoIDENT : '(' ')' .  (45)

	.  reduce 45


state 65
	listaExp : E . restoListaEXP  (47)
	restoListaEXP : .  (49)

	','  shift 71
	')'  reduce 49

	restoListaEXP  goto 72


state 66
	restoIDENT : '(' listaExp . ')'  (44)

	')'  shift 73
	.  error


state 67
	Cmd : IF '(' E . ')' Cmd restoIF  (24)

	')'  shift 74
	.  error


state 68
	Cmd : WHILE '(' E . ')' Cmd  (25)

	')'  shift 75
	.  error


state 69
	F : '(' E ')' .  (34)

	.  reduce 34


state 70
	EA : OP E .  (30)

	.  reduce 30


state 71
	restoListaEXP : ',' . listaExp  (48)

	IDENT  shift 32
	NUM  shift 33
	'('  shift 36
	.  error

	E  goto 65
	F  goto 41
	listaExp  goto 76


state 72
	listaExp : E restoListaEXP .  (47)

	.  reduce 47


state 73
	restoIDENT : '(' listaExp ')' .  (44)

	.  reduce 44


state 74
	Cmd : IF '(' E ')' . Cmd restoIF  (24)

	IDENT  shift 32
	NUM  shift 33
	IF  shift 34
	WHILE  shift 35
	'('  shift 36
	'{'  shift 27
	.  error

	Bloco  goto 37
	Cmd  goto 77
	E  goto 40
	F  goto 41


state 75
	Cmd : WHILE '(' E ')' . Cmd  (25)

	IDENT  shift 32
	NUM  shift 33
	IF  shift 34
	WHILE  shift 35
	'('  shift 36
	'{'  shift 27
	.  error

	Bloco  goto 37
	Cmd  goto 78
	E  goto 40
	F  goto 41


state 76
	restoListaEXP : ',' listaExp .  (48)

	.  reduce 48


77: shift/reduce conflict (shift 79, reduce 28) on ELSE
state 77
	Cmd : IF '(' E ')' Cmd . restoIF  (24)
	restoIF : .  (28)

	ELSE  shift 79
	IDENT  reduce 28
	NUM  reduce 28
	IF  reduce 28
	WHILE  reduce 28
	'('  reduce 28
	'{'  reduce 28
	'}'  reduce 28

	restoIF  goto 80


state 78
	Cmd : WHILE '(' E ')' Cmd .  (25)

	.  reduce 25


state 79
	restoIF : ELSE . Cmd  (27)

	IDENT  shift 32
	NUM  shift 33
	IF  shift 34
	WHILE  shift 35
	'('  shift 36
	'{'  shift 27
	.  error

	Bloco  goto 37
	Cmd  goto 81
	E  goto 40
	F  goto 41


state 80
	Cmd : IF '(' E ')' Cmd restoIF .  (24)

	.  reduce 24


state 81
	restoIF : ELSE Cmd .  (27)

	.  reduce 27


State 77 contains 1 shift/reduce conflict.


27 terminals, 23 nonterminals
50 grammar rules, 82 states
